# instragram

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250128_0001_initial_schema.py  20250128_0002_add_follow_indexes.py
backend/api/: __init__.py  deps.py  router.py
backend/api/v1/: __init__.py  auth.py  feed.py  posts.py  routes.py  users.py
backend/app/: __init__.py  main.py
backend/core/: __init__.py  config.py  security.py
backend/db/: __init__.py  session.py
backend/models/: __init__.py  base.py  comment.py  follow.py  like.py  post.py  refresh_token.py  user.py
backend/schemas/: __init__.py
backend/scripts/: seed.py
backend/services/: __init__.py  images.py  rate_limiter.py  storage.py
backend/tests/: conftest.py  test_auth.py  test_auth_additional.py  test_deps.py  test_feed.py  test_follow.py  test_health.py  test_images.py  test_performance.py  test_posts.py  test_rate_limiter.py  test_security.py  test_storage.py  test_user_models.py  test_users.py  test_users_additional.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: env.d.ts  middleware.ts
frontend/src/app/: error.tsx  layout.tsx
frontend/src/app/(protected)/: layout.tsx  page.tsx
frontend/src/components/post/: CommentForm.tsx  LikeButton.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: image.ts  sanitize.ts
frontend/src/types/: feed.ts  next-auth.d.ts
(+26 files in other folders)
